--- a/Cinelandia-master1/cliente/Informacoes.html
+++ b/Cinelandia-master1/cliente/Informacoes.html
@@ -16,10 +16,10 @@
 <body>
     <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:900px;"></img><br>
     <ul><br>
-        <li><a class="active" href="Index1.html"> Home </a></li>
-        <li><a href="Index2.html"> Sobre os autores </a></li>
-        <li><a href="Index2.html"> O que é cinelândia? </a></li>
-        <li><a href="Index2.html"> Ajuda </a></li>
+        <li><a class="active" href="index.html"> Home </a></li>
+        <li><a href="dados.html"> Sobre os autores </a></li>
+        <li><a href="dados.html"> O que é cinelândia? </a></li>
+        <li><a href="dados.html"> Ajuda </a></li>
         <br><br>
     </ul><br><br>
 
@@ -48,7 +48,7 @@
     <button type="button" class="btn btn-primary btn-lg" style="width: 100px; height: 50px"><a href="busca.html">
             Voltar para busca </a></button>
 
-    <button type="button" class="btn btn-primary btn-lg" style="width: 100px; height: 50px"><a href="omentarios.html">
+    <button type="button" class="btn btn-primary btn-lg" style="width: 100px; height: 50px"><a href="Comentarios.html">
                     Adicionar comentário</a></button><br><br><br>
 
     <table border="0">
