--- a/Cinelandia-master1/cliente/Categorias.html
+++ b/Cinelandia-master1/cliente/Categorias.html
@@ -27,10 +27,10 @@
 <body>
         <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;" > 
         <ul><br>
-                <li><a class="active" href="Index1.html"> Home </a></li>
-                <li><a href="Index2.html"> Sobre os autores </a></li>
-                <li><a href="Index2.html"> O que é cinelândia? </a></li>
-                <li><a href="Index2.html"> Ajuda </a></li>
+                <li><a class="active" href="index.html"> Home </a></li>
+                <li><a href="dados.html"> Sobre os autores </a></li>
+                <li><a href="dados.html"> O que é cinelândia? </a></li>
+                <li><a href="dados.html"> Ajuda </a></li>
                 <br><br>
         </ul><br><br>
         
