--- a/Cinelandia-master1/cliente/Login.html
+++ b/Cinelandia-master1/cliente/Login.html
@@ -20,10 +20,10 @@
 <body>
   <ul><br>
     <img class="displayed" src="img\Logo.JPEG" alt="Logo" style="width:400px;"></img>
-    <li><a class="active" href="Index1.html"> Home </a></li>
-    <li><a href="Index2.html"> Sobre os autores </a></li>
-    <li><a href="Index2.html"> O que é cinelândia? </a></li>
-    <li><a href="Index2.html"> Ajuda </a></li>
+    <li><a class="active" href="index.html"> Home </a></li>
+    <li><a href="dados.html"> Sobre os autores </a></li>
+    <li><a href="dados.html"> O que é cinelândia? </a></li>
+    <li><a href="dados.html"> Ajuda </a></li>
     <br><br>
   </ul><br><br>
 
@@ -56,7 +56,8 @@
             }).then(function (r) {
               if (r.status == 200) {
                 vm.$session.start();
-                window.location.replace("Index1.html");
+                vm.$session.set("id", r.data);
+                window.location.replace("index.html");
               }
             }).catch(function (error) {
               console.log(error);
