--- a/Cinelandia-master1/cliente/Login.html
+++ b/Cinelandia-master1/cliente/Login.html
@@ -17,6 +17,7 @@
   <script src="js/axios.min.js"></script>
 
 </head>
+
 <body>
   <ul><br>
     <img class="displayed" src="img\Logo.JPEG" alt="Logo" style="width:400px;"></img>
@@ -30,7 +31,7 @@
   <div class=container>
     <div id="app">
       Usuário: <input type="text" v-model="username" size="50"><br><br>
-      Senha: <input type="password" v-model="password"size="50"><br><br>
+      Senha: <input type="password" v-model="password" size="50"><br><br>
       <button type="button" @click="submit">Entrar</button><br>
       <p style="color: red">{{error}}</p>
     </div>
@@ -44,7 +45,6 @@
           error: null
         },
         created() {
-
         },
         methods: {
           submit() {
@@ -55,6 +55,7 @@
               password: vm.password
             }).then(function (r) {
               if (r.status == 200) {
+                console.log(r.data);
                 vm.$session.start();
                 vm.$session.set("id", r.data);
                 window.location.replace("index.html");
