--- a/Cinelandia-master1/cliente/index.html
+++ b/Cinelandia-master1/cliente/index.html
@@ -15,6 +15,7 @@
     <script src="js/vue.js"></script>
     <script src="js/vue-router.js"></script>
     <script src="js/axios.min.js"></script>
+    <script src="js/index.esm.js"></script>
 
 </head>
 
@@ -31,16 +32,16 @@
         <br><br>
     </ul><br><br>
     <div class=container>
-        <div id="app">
-            <a href="cadastro1.html" class="btn btn-primary">Inserir</a>
-            <h3>Lista de Usuários</h3>
-            <ul>
-                <li v-for="usuario in usuarios">
-                    <a :href="'Conta1.html?id='+usuario.id">{{usuario.username}}</a>
-                </li>
-            </ul>            
-        </div>
-        
+            <div id="app">
+                <a v-if="flagSair" href="cadastro1.html" class="btn btn-primary">Inserir</a>
+                <button v-if="flagSair" class="btn btn-danger" type="button" @click="logout">Sair</button>
+                <a v-if="flagLogin" href="Login.html" class="btn btn-warning">Login</a>
+                <ul>
+                    <li v-for="usuario in usuarios">
+                        <a :href="'Conta1.html?id='+usuario.id">{{usuario.username}}</a>
+                    </li>
+                </ul>
+            </div>
 
     <table border="0">
         <tr>
@@ -68,26 +69,39 @@
     </footer>
 
     <script>
-        var app = new Vue({
-            el: "#app",
-            data: {
-                url: "http://localhost:8080/rest_persistence/api/users",
-                usuarios: []
-            },
-            created() {
-                vm = this;
-                axios.get(this.url).then(function (r) {
-                    if(r.data.user.length > 1) {
-                        vm.usuarios = r.data.user;    
-                    } else {
-                        vm.usuarios = r.data;
+            var app = new Vue({
+                el: "#app",
+                data: {
+                    url: "http://localhost:8080/rest_persistence/api/users",
+                    usuarios: [],
+                    flagSair: false,
+                    flagLogin: true
+                },
+                created() {
+                    if (this.$session.exists()) {
+                        this.flagSair = true;
+                        this.flagLogin = false;
                     }
-                }).catch(function (error) {
-                    console.log(error);
-                });
-            }
-        });
-    </script>
+                    vm = this;
+                    axios.get(this.url).then(function (r) {
+                        if(r.data.user.length > 1) {
+                            vm.usuarios = r.data.user;    
+                        } else {
+                            vm.usuarios = r.data;
+                        }
+                    }).catch(function (error) {
+                        console.log(error);
+                    }); 
+                },
+                methods: {
+                    logout() {
+                        this.$session.destroy()
+                        this.flagSair = false;
+                        this.flagLogin = true;                        
+                    }
+                }
+            });
+        </script>
 
 </body>
 
