--- a/Cinelandia-master1/cliente/cadastro1.html
+++ b/Cinelandia-master1/cliente/cadastro1.html
@@ -22,6 +22,7 @@
         <li><a href="dados.html"> Sobre os autores </a></li>
         <li><a href="dados.html"> O que é cinelândia? </a></li>
         <li><a href="dados.html"> Ajuda </a></li>
+        <li><a href="Conta.html"> Minha conta </a></li>
         <br><br>
     </ul><br><br>
 
@@ -134,7 +135,6 @@
         });
     </script>
     <br><br>
-    </div>
     <table border="0">
         <tr>
             <th><a href="Termo.html"> Termos de serviço </a></th>
