--- a/Cinelandia-master1/cliente/Categorias.html
+++ b/Cinelandia-master1/cliente/Categorias.html
@@ -7,7 +7,14 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Hege Refsnes">
-    <link rel="stylesheet" href="css\Index.css">
+    <link rel="stylesheet" href="css/Index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/vue-router.js"></script>
+    <script src="js/vue-session.js"></script>
+    <script src="js/axios.min.js"></script>
 
     <style>
         div {
@@ -25,15 +32,16 @@
 </head>
 
 <body>
-        <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;" > 
-        <ul><br>
-                <li><a class="active" href="index.html"> Home </a></li>
-                <li><a href="dados.html"> Sobre os autores </a></li>
-                <li><a href="dados.html"> O que é cinelândia? </a></li>
-                <li><a href="dados.html"> Ajuda </a></li>
-                <br><br>
-        </ul><br><br>
-        
+    <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;">
+    <ul><br>
+        <li><a class="active" href="index.html"> Home </a></li>
+        <li><a href="dados.html"> Sobre os autores </a></li>
+        <li><a href="dados.html"> O que é cinelândia? </a></li>
+        <li><a href="dados.html"> Ajuda </a></li>
+        <li><a href="Conta.html"> Minha conta </a></li>
+        <br><br>
+    </ul><br><br>
+
     <div>
         <h3> Filtros por categorias e ano de lançamento </h3><br><br>
         <h3> Selecione uma categoria </h3>
@@ -52,9 +60,9 @@
         </button><br><br>
     </div>
 
-    
+
     <div>
-            <h3> Selecione o ano de lançamento </h3>
+        <h3> Selecione o ano de lançamento </h3>
         <button type="button" class="btn btn-primary btn-lg" style="width: 70px; height: 50px"> 2019 </button>
         <button type="button" class="btn btn-primary btn-lg" style="width: 70px; height: 50px"> 2018 </button>
         <button type="button" class="btn btn-primary btn-lg" style="width: 70px; height: 50px"> 2017 </button>
@@ -99,12 +107,45 @@
         <h3 id="contatos" class="cor-tres"> Contatos </h3>
         <a href="https://www.facebook.com/Cinelandia-625870567841308/?view_public_for=625870567841308"> <img
                 src="img\facebook.PNG" alt="" width="40" height="40"> </a>
-        <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40" height="40"> </a>
+        <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40" height="40">
+        </a>
         <a href="https://twitter.com/cinelndia6"> <img src="img\twitterP.PNG" alt="" width="40" height="40"> </a>
 
-
     </footer>
-
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+                url: "http://localhost:8080/rest_persistence/api/users",
+                usuarios: [],
+                flagSair: false,
+                flagLogin: true
+            },
+            created() {
+                if (this.$session.exists()) {
+                    this.flagSair = true;
+                    this.flagLogin = false;
+                }
+                vm = this;
+                axios.get(this.url).then(function (r) {
+                    if (r.data.user.length > 1) {
+                        vm.usuarios = r.data.user;
+                    } else {
+                        vm.usuarios = r.data;
+                    }
+                }).catch(function (error) {
+                    console.log(error);
+                });
+            },
+            methods: {
+                logout() {
+                    this.$session.destroy()
+                    this.flagSair = false;
+                    this.flagLogin = true;
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
