--- a/Cinelandia-master1/cliente/Termo.html
+++ b/Cinelandia-master1/cliente/Termo.html
@@ -6,18 +6,26 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Hege Refsnes">
-    <link rel="stylesheet" href="css\Index.css">
+    <link rel="stylesheet" href="css/Index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/vue-router.js"></script>
+    <script src="js/vue-session.js"></script>
+    <script src="js/axios.min.js"></script>
 </head>
 
 <body>
-        <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;" > 
-        <ul><br>
-                <li><a class="active" href="index.html"> Home </a></li>
-                <li><a href="dados.html"> Sobre os autores </a></li>
-                <li><a href="dados.html"> O que é cinelândia? </a></li>
-                <li><a href="dados.html"> Ajuda </a></li>
-                <br><br>
-        </ul><br><br>
+    <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;">
+    <ul><br>
+        <li><a class="active" href="index.html"> Home </a></li>
+        <li><a href="dados.html"> Sobre os autores </a></li>
+        <li><a href="dados.html"> O que é cinelândia? </a></li>
+        <li><a href="dados.html"> Ajuda </a></li>
+        <li><a href="COnta.html">Minha conta</a></li>
+        <br><br>
+    </ul><br><br>
 
     <p>Termos e Condições de Compra e Venda de Cinelândia, com sede na Rua Cazuza Ferreira, Casa, doravante denominada
         simplesmente Cinelândia, e, de outro lado, o cliente Cinelândia, qualificado no momento da compra dos produtos
@@ -97,27 +105,61 @@
         depósito bancário, em até 10 (dez) dias úteis, somente na conta corrente do(a) comprador(a), que deve ser
         individual. É necessário que o CPF do titular da conta corrente.</p>
 
-        <table border="0">
-            <tr>
-                <th><a href="Termo.html"> Termos de serviço </a></th>
-                <th><a href="Politica.html"> Privacidade </a></th>
-                <th><a href=""> Equipe </a></th>
-            </tr>
-        </table>
+    <table border="0">
+        <tr>
+            <th><a href="Termo.html"> Termos de serviço </a></th>
+            <th><a href="Politica.html"> Privacidade </a></th>
+            <th><a href=""> Equipe </a></th>
+        </tr>
+    </table>
 
-        <footer>
-            <p>Trabalho de Luan Santos e Ronald Bonfim</p>
-            <p>Contatos para informações: <a
-                    href="https://mail.google.com/mail/ca/u/0/#inbox?compose=GTvVlcSKkkHDDGbJmpZGSHNbtMfSmRnkvMgFlQhTvVxdFwrflHbGJWLlgSKphWkphmScLLGWhRXNx">
-                    cinelandialr@gmail.com</a>.</p>
-            <h3 id="contatos" class="cor-tres"> Contatos </h3>
-            <a href="https://www.facebook.com/Cinelandia-625870567841308/?view_public_for=625870567841308"> <img
-                    src="img\facebook.PNG" alt="" width="40" height="40"> </a>
-            <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40" height="40"> </a>
-            <a href="https://twitter.com/cinelndia6"> <img src="img\twitterP.PNG" alt="" width="40" height="40"> </a>
-    
-    
-        </footer>
+    <footer>
+        <p>Trabalho de Luan Santos e Ronald Bonfim</p>
+        <p>Contatos para informações: <a
+                href="https://mail.google.com/mail/ca/u/0/#inbox?compose=GTvVlcSKkkHDDGbJmpZGSHNbtMfSmRnkvMgFlQhTvVxdFwrflHbGJWLlgSKphWkphmScLLGWhRXNx">
+                cinelandialr@gmail.com</a>.</p>
+        <h3 id="contatos" class="cor-tres"> Contatos </h3>
+        <a href="https://www.facebook.com/Cinelandia-625870567841308/?view_public_for=625870567841308"> <img
+                src="img\facebook.PNG" alt="" width="40" height="40"> </a>
+        <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40" height="40">
+        </a>
+        <a href="https://twitter.com/cinelndia6"> <img src="img\twitterP.PNG" alt="" width="40" height="40"> </a>
+
+    </footer>
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+                url: "http://localhost:8080/rest_persistence/api/users",
+                usuarios: [],
+                flagSair: false,
+                flagLogin: true
+            },
+            created() {
+                if (this.$session.exists()) {
+                    this.flagSair = true;
+                    this.flagLogin = false;
+                }
+                vm = this;
+                axios.get(this.url).then(function (r) {
+                    if (r.data.user.length > 1) {
+                        vm.usuarios = r.data.user;
+                    } else {
+                        vm.usuarios = r.data;
+                    }
+                }).catch(function (error) {
+                    console.log(error);
+                });
+            },
+            methods: {
+                logout() {
+                    this.$session.destroy()
+                    this.flagSair = false;
+                    this.flagLogin = true;
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
