--- a/Cinelandia-master1/cliente/busca.html
+++ b/Cinelandia-master1/cliente/busca.html
@@ -7,7 +7,14 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Hege Refsnes">
-    <link rel="stylesheet" href="css\Index.css">
+    <link rel="stylesheet" href="css/Index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/vue-router.js"></script>
+    <script src="js/vue-session.js"></script>
+    <script src="js/axios.min.js"></script>
 
     <title>Busca de entidades do sistema</title>
 
@@ -32,6 +39,7 @@
         <li><a href="dados.html"> Sobre os autores </a></li>
         <li><a href="dados.html"> O que é cinelândia? </a></li>
         <li><a href="dados.html"> Ajuda </a></li>
+        <li><a href="Conta.html"> Minha conta </a></li>
         <br><br>
     </ul><br><br>
 
