--- a/Cinelandia-master1/cliente/dados.html
+++ b/Cinelandia-master1/cliente/dados.html
@@ -7,19 +7,26 @@
     <meta name="description" content="Free Web tutorials">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Hege Refsnes">
-    <link rel="stylesheet" href="css\Index.css">
+    <link rel="stylesheet" href="css/Index.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/vue.js"></script>
+    <script src="js/vue-router.js"></script>
+    <script src="js/vue-session.js"></script>
+    <script src="js/axios.min.js"></script>
 
 </head>
 
 <body>
-        <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:800px;" > 
-        <ul><br>
-                <li><a class="active" href="index.html"> Home </a></li>
-                <li><a href="dados.html"> Sobre os autores </a></li>
-                <li><a href="dados.html"> O que é cinelândia? </a></li>
-                <li><a href="dados.html"> Ajuda </a></li>
-                <br><br>
-        </ul><br><br>
+    <ul><br>
+        <img class="displayed" src="img/Logo.JPEG" alt="Logo" style="width:400px;">
+        <li><a class="active" href="index.html"> Home </a></li>
+        <li><a href="dados.html"> Sobre os autores </a></li>
+        <li><a href="dados.html"> O que é cinelândia? </a></li>
+        <li><a href="dados.html"> Ajuda </a></li>
+        <li><a href="Conta.html"> Minha conta </a></li>
+    </ul><br>
 
     <h2 id="sobre" class="cor-um"> Sobre os autores </h2>
     <p> Os autores do site são alunos da Universidade Federal do Ceará - Campus de Crateús. Produziram o site com
@@ -34,12 +41,12 @@
     <h2> O que é cinelâdia </h2>
     <p> O cinelândia é um site criado para fãs de cinema, seja por animes, filmes ou séries.</p>
     <h4> Segue uma lista de funcionalidades do site: </h4>
-    
-        <p> Conhecimento abrangente sobre filmes, séries e animes; </p>
-        <p> Interação com pessoas com o mesmo gosto que o seu; </p>
-        <p> Você pode dar um final alternativo para os filmes; </p>
-        <p> Você pode comentar algo sobre os personagens, dizendo qual seu ponto de vista sobre o assunto; </p>
-     <br><br>
+
+    <p> Conhecimento abrangente sobre filmes, séries e animes; </p>
+    <p> Interação com pessoas com o mesmo gosto que o seu; </p>
+    <p> Você pode dar um final alternativo para os filmes; </p>
+    <p> Você pode comentar algo sobre os personagens, dizendo qual seu ponto de vista sobre o assunto; </p>
+    <br><br>
 
     <table border="0">
         <tr>
@@ -51,15 +58,50 @@
 
     <footer>
         <p>Trabalho de Luan Santos e Ronald Bonfim</p>
-        <p>Contatos para informações: <a href="https://mail.google.com/mail/ca/u/0/#inbox?compose=GTvVlcSKkkHDDGbJmpZGSHNbtMfSmRnkvMgFlQhTvVxdFwrflHbGJWLlgSKphWkphmScLLGWhRXNx">
+        <p>Contatos para informações: <a
+                href="https://mail.google.com/mail/ca/u/0/#inbox?compose=GTvVlcSKkkHDDGbJmpZGSHNbtMfSmRnkvMgFlQhTvVxdFwrflHbGJWLlgSKphWkphmScLLGWhRXNx">
                 sluan380@gmail.com</a>.</p>
         <h3 id="contatos" class="cor-tres"> Contatos </h3>
-        <a href="https://www.facebook.com/Cinelandia-625870567841308/?view_public_for=625870567841308"> <img src="img\facebook.PNG" alt="" width="40" height="40"> </a>
-        <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40"
-                height="40"> </a>
+        <a href="https://www.facebook.com/Cinelandia-625870567841308/?view_public_for=625870567841308"> <img
+                src="img\facebook.PNG" alt="" width="40" height="40"> </a>
+        <a href="https://www.instagram.com/cinelandialr/"> <img src="img\instagram.PNG" alt="" width="40" height="40">
+        </a>
         <a href="https://twitter.com/cinelndia6"> <img src="img\twitterP.PNG" alt="" width="40" height="40"> </a>
     </footer>
-
+    <script>
+        var app = new Vue({
+            el: "#app",
+            data: {
+                url: "http://localhost:8080/rest_persistence/api/users",
+                usuarios: [],
+                flagSair: false,
+                flagLogin: true
+            },
+            created() {
+                if (this.$session.exists()) {
+                    this.flagSair = true;
+                    this.flagLogin = false;
+                }
+                vm = this;
+                axios.get(this.url).then(function (r) {
+                    if (r.data.user.length > 1) {
+                        vm.usuarios = r.data.user;
+                    } else {
+                        vm.usuarios = r.data;
+                    }
+                }).catch(function (error) {
+                    console.log(error);
+                });
+            },
+            methods: {
+                logout() {
+                    this.$session.destroy()
+                    this.flagSair = false;
+                    this.flagLogin = true;
+                }
+            }
+        });
+    </script>
 
 </body>
 
