--- a/Cinelandia-master1/cliente/Conta.html
+++ b/Cinelandia-master1/cliente/Conta.html
@@ -29,15 +29,15 @@
         <div id="app">
             <h3>Usuário</h3>
             <div v-if="flag"><br>
-                <p>{{usuario.id}}</p><br>
-                <p>{{usuario.username}}</p><br>
-                <p>{{usuario.email}}</p><br>
-                <button class="btn btn-danger" type="button" @click="deleteUser">Excluir</button>
+                <p>Id: {{usuario.id}}</p><br>
+                <p>Usuário: {{usuario.username}}</p><br>
+                <p>Email: {{usuario.email}}</p><br>
+                <button class="btn btn-danger" type="button" @click="deleteUser">Excluir</button><br><br>
             </div>
         </div>
 
         <a href="busca.html"><img src="img\busca.jpg" alt="ir para busca"></a>
-        <a href="Index1.html"><img src="img\nav.jpg" alt="Navegar"></a>
+        <a href="index.html"><img src="img\nav.jpg" alt="Navegar"></a>
 
         <table border="0">
             <tr>
